@@ -12,6 +12,9 @@ apt (0.9.2) unstable; urgency=low
     - do not use the input data directly but memcpy it instead as
       it could be unaligned as in the http-transport which causes
       a sigbus error on sparc (Closes: #669061)
+  * apt-pkg/cacheset.cc:
+    - actually return to the fallback modifier if we have detected we
+      should for packagenames which look like modifiers (Closes: #669591)
 
 
   [ Malcolm Scott ]
@@ -19,7 +22,7 @@ apt (0.9.2) unstable; urgency=low
     - iterate over all pre-depends or-group member instead of looping
       endlessly over the first member in SmartUnpack (LP: #985852)
 
- -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 20 Apr 2012 09:52:21 +0200
+ -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 20 Apr 2012 10:11:24 +0200
 
 apt (0.9.1) unstable; urgency=low
 
